Cycle 6 completed - Ready for deployment

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,13 +1,9 @@
+
 [pytest]
-addopts = -v --cov=app --cov-report=term-missing --cov-report=html
 testpaths = tests/
+addopts = -v --cov=app --cov=scripts --cov-report=term-missing
+norecursedirs = .venv .git migrations instance .pytest_cache
 pythonpath = .
-norecursedirs = 
-    .venv 
-    .git 
-    migrations 
-    instance
-    .pytest_cache
 minversion = 7.0
 python_files = test_*.py *_tests.py
 python_classes = Test* *Test
