--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,96 @@
+aider-install==0.1.3
+aiohttp==3.8.4
+aiosignal==1.3.1
+alembic==1.12.0
+async-timeout==4.0.2
+attrs==23.1.0
+backoff==2.2.1
+beautifulsoup4==4.12.3
+bleach==6.1.0
+blinker==1.8.2
+certifi==2023.5.7
+cffi==1.17.1
+charset-normalizer==3.1.0
+click==8.1.8
+colorama==0.4.6
+ConfigArgParse==1.7
+coverage==7.6.1
+croniter==1.4.1
+Deprecated==1.2.15
+diskcache==5.6.1
+dnspython==2.6.1
+email-validator==2.0.0
+exceptiongroup==1.2.2
 flake8==7.0.0
+Flask==2.3.2
+Flask-Limiter==3.5.0
+Flask-Login==0.6.3
+Flask-Migrate==4.0.5
+Flask-SQLAlchemy==3.1.1
+Flask-Testing==0.8.1
+Flask-WTF==1.2.1
 freezegun==1.2.2
+frozenlist==1.3.3
+gitdb==4.0.10
+GitPython==3.1.31
+greenlet==3.1.1
+idna==3.4
+importlib_metadata==8.5.0
+importlib_resources==6.4.5
+iniconfig==2.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.5
+jsonschema==4.17.3
+limits==3.13.0
+Mako==1.3.8
+markdown-it-py==2.2.0
+MarkupSafe==2.1.5
+mccabe==0.7.0
+mdurl==0.1.2
+multidict==6.0.4
+networkx==3.1
+numpy==1.24.3
+openai==0.27.6
+ordered-set==4.1.0
+packaging==24.2
+pkgutil_resolve_name==1.3.10
+pluggy==1.5.0
+prompt-toolkit==3.0.38
+pycodestyle==2.11.1
+pycparser==2.22
+pyflakes==3.2.0
+Pygments==2.15.1
+pyrsistent==0.20.0
 pytest==7.4.3
 pytest-cov==4.1.0
-Flask==2.3.2
-Flask-SQLAlchemy==3.1.1
-alembic==1.12.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.0
-SQLAlchemy==2.0.23
-Flask-Login==0.6.3
-Werkzeug==2.3.7 
-Flask-WTF==1.2.1
-WTForms==3.1.1
-email-validator==2.0.0
-flask-migrate==4.0.5
-pytz==2023.3.post1
-Flask-Limiter==3.5.0
 python-json-logger==2.0.7
-requirements-parser==0.6.0
-setuptools==68.1.2
+pytz==2023.3.post1
+PyYAML==6.0.2
 redis==5.0.1
-bleach==6.1.0
-flask_testing==0.8.1
-croniter==1.4.1
-beautifulsoup4==4.12.3
+regex==2024.11.6
+requests==2.30.0
+requirements-parser==0.6.0
+rich==13.3.5
+scipy==1.10.1
+six==1.17.0
+smmap==5.0.0
+sounddevice==0.4.6
+soundfile==0.12.1
+soupsieve==2.6
+SQLAlchemy==2.0.23
+tiktoken==0.4.0
+tomli==2.2.1
+tqdm==4.65.0
+types-setuptools==75.6.0.20241223
+typing_extensions==4.12.2
+urllib3==2.0.2
+uv==0.5.14
+wcwidth==0.2.6
+webencodings==0.5.1
+Werkzeug==2.3.7
+wrapt==1.17.0
+WTForms==3.1.1
+yarl==1.9.2
+zipp==3.20.2
