Cycle 7 completed - Version 1.2.11 deployed

--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ SECRET_KEY=your_secure_key_here_64chars_Abc123!@#Abc123!@#Abc123!@#Abc123!@#Abc1
 # Minimum 64 characters, use a secure random generator
 DATABASE_URL=sqlite:///instance/site.db
 ADMIN_USERNAME=A2
-ADMIN_PASSWORD=A2
+ADMIN_PASSWORD=Aa1234567812345678?
 ADMIN_EMAIL=admin@example.com
 VERSION_MANAGEMENT_ENABLED=True
 BACKUP_INTERVAL=86400  # Daily backups
